--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -57,9 +57,9 @@ described in Section~\ref{sec:prog}
 This section deals with the normalization of all tables in the database. In 
 particular whether it is in conformance with the first, second, and third 
 normal forms, and if not, how the normalizations were achieved. It is important 
-to note that the normalisations were obtained throughout the process and not as 
-a single step near the end. The steps towards each normalisation may therefore 
-not have taken part in order, and some normalisations were performed on early 
+to note that the normalizations were obtained throughout the process and not as 
+a single step near the end. The steps towards each normalization may therefore 
+not have taken part in order, and some normalizations were performed on early 
 stages of the database, that are not covered in this report, as changes 
 happened rapidly. 
 
@@ -96,7 +96,7 @@ depend on the primary key (assuming the primary key is selected reasonably).
 
 \subsubsection{Third Normal Form}
 For a table to be in third normal form, it must be in second normal form and 
-there cannot be any transitive attribute dependencies. That is to say that even 
+there cannot be any transitive attribute dependencies. That is to say, that even 
 though two attributes both depend on the primary key, if one can be derived 
 from the other, the table is not in third normal form. This was initially the 
 case as the employees originally had both a \emph{city} and a \emph{zip code} 
