--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,3 @@
-
 Tobias:
 
 Code:
@@ -30,7 +29,9 @@ ER diagram:
 Remove foreign keys
 Relation between Track and Station (Tertiary perhaps? / Station to Route)
 optional middle name for Employee
-Functions:
-	Route.Length()
-
+Views:
+	Route length
+	Train age
+	Station neighbours
+[stop attribute] on 'contains' relation
 	
